# crm

./: .gitignore  .phase6c-code.patch.gz.b64  .phase8a3c-semantic-hardening-trigger  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  VALIDATION.md  architecture-policy.json  buf.gen.web.yaml  buf.gen.yaml  buf.yaml  contract-manifest.json  package.json  pending-application-materialization-recovery-diagnostic.txt  phase8a10-provider-background-registration.error.txt  phase8a10-stale-guard-diagnostic.txt  phase8a10-stale-guard-process-diagnostic.txt  phase8a7-patch-error.txt  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-dev.txt  tsconfig.base.json
crates/crm-activities-capability-adapter/: Cargo.toml
crates/crm-activities-capability-adapter/src/: lib.rs
crates/crm-activities-capability-adapter/tests/: postgres_noop.rs
crates/crm-application-composition/: Cargo.toml
crates/crm-application-composition/src/: lib.rs  workers.rs
crates/crm-application-runtime/: Cargo.toml  PROMOTION_DIAGNOSTIC.txt  build.rs
crates/crm-application-runtime/src/: background.rs  bootstrap_visibility.rs  bootstrap_visibility_overlay.rs  config.rs  customer_enrichment_application_worker.rs  customer_enrichment_materialization_process.rs  customer_enrichment_provider_process.rs  customer_enrichment_provider_registry.rs  customer_enrichment_provider_source.rs  customer_enrichment_provider_worker.rs  customer_enrichment_reject_promotion.rs  customer_enrichment_suggestion_list_promotion.rs  customer_privacy_case_create_promotion.rs  customer_privacy_subject_verify_candidate.rs  data_quality_capability_execution.rs  data_quality_query_registration.rs  data_quality_registration.rs  export_artifact_download.rs  export_artifact_download_http.rs  export_execution_bootstrap.rs  export_execution_process.rs  export_execution_source.rs  export_selection_bootstrap.rs  export_selection_source.rs  gateway_grpc.rs  governed_metadata.rs  lib.rs  native_composition.rs  phase8a5_cleanup_trigger.rs  platform.rs  process.rs  runtime.rs
crates/crm-application-runtime/tests/: customer_enrichment_provider_source_contract.rs  customer_enrichment_provider_transport_isolation_contract.rs  customer_enrichment_registration_contract.rs  customer_privacy_production_inventory.rs  data_quality_registration_contract.rs  export_artifact_download_contract.rs  export_selection_runtime_contract.rs  export_selection_source_contract.rs  export_selection_worker_identity_contract.rs  generate_hashes.rs  import_execution_runtime_surface.rs  import_source_runtime_surface.rs  postgres_customer_enrichment_application_worker.rs  postgres_customer_enrichment_consent_policy.rs  postgres_customer_enrichment_provider_credential_isolation_process.rs  postgres_customer_enrichment_provider_http_process.rs  postgres_customer_enrichment_provider_http_timeout_process.rs  postgres_customer_enrichment_provider_materialization_http_process.rs  postgres_customer_enrichment_provider_worker.rs  postgres_customer_enrichment_suggestion_accept.rs  postgres_customer_enrichment_suggestion_get.rs  postgres_customer_enrichment_suggestion_reject.rs  production_route_parity.rs
crates/crm-capability-adapters/: Cargo.toml  build.rs
crates/crm-capability-adapters/src/: approval.rs  authorization.rs  client.rs  lib.rs  query_visibility.rs  rate_limit.rs  registry.rs  signed_approval.rs
crates/crm-capability-ingress/: Cargo.toml
crates/crm-capability-ingress/src/: authentication.rs  context.rs  core.rs  grpc.rs  http.rs  lib.rs  query_context.rs  query_core.rs  query_grpc.rs  query_http.rs
crates/crm-capability-ingress/tests/: postgres_gateway_e2e.rs  postgres_production_evidence_rollback.rs  postgres_production_mutations.rs  postgres_production_queries.rs
crates/crm-capability-plan-support/: Cargo.toml
crates/crm-capability-plan-support/src/: lib.rs
crates/crm-consents-capability-composition/: Cargo.toml
crates/crm-consents-capability-composition/src/: lib.rs  planner.rs
crates/crm-consents-query-adapter/: Cargo.toml
crates/crm-consents-query-adapter/src/: lib.rs
crates/crm-contact-points-capability-adapter/: Cargo.toml
crates/crm-contact-points-capability-adapter/src/: lib.rs  planner.rs
crates/crm-contact-points-capability-composition/: Cargo.toml
crates/crm-contact-points-capability-composition/src/: lib.rs
crates/crm-contact-points-query-adapter/: Cargo.toml
crates/crm-contact-points-query-adapter/src/: lib.rs
crates/crm-core-data/: Cargo.toml  build.rs
crates/crm-core-data/src/: aggregate_executor.rs  audit.rs  audited_read.rs  capability_executor.rs  lib.rs  metadata_capability_executor.rs  metadata_query_store.rs  metadata_store.rs  module_activation.rs  postgres.rs  postgres_batch.rs  postgres_bound_read.rs  postgres_event_delivery.rs  postgres_event_delivery_ledger.rs  postgres_file_artifact.rs  postgres_file_artifact_capability.rs  postgres_module_runtime.rs  (+7 more)
crates/crm-customer-360-composition/: Cargo.toml
crates/crm-customer-360-query-adapter/: Cargo.toml
crates/crm-customer-accounts-capability-adapter/: Cargo.toml
crates/crm-customer-accounts-capability-composition/: Cargo.toml
crates/crm-customer-accounts-query-adapter/: Cargo.toml
crates/crm-customer-data-operations-execution-composition/: Cargo.toml  build.rs
crates/crm-customer-data-operations-query-adapter/: Cargo.toml  build.rs
crates/crm-customer-data-operations-source-composition/: Cargo.toml  build.rs
crates/crm-customer-enrichment-application-composition/: Cargo.toml  README.md
crates/crm-customer-enrichment-capability-adapter/: Cargo.toml
crates/crm-customer-enrichment-capability-composition/: Cargo.toml
crates/crm-customer-enrichment-materialization-composition/: Cargo.toml  README.md
crates/crm-customer-enrichment-provider-process-composition/: Cargo.toml
crates/crm-customer-enrichment-query-adapter/: Cargo.toml
crates/crm-customer-enrichment-registry-http-transport/: Cargo.toml  README.md
crates/crm-customer-enrichment-review-composition/: CHECKPOINT.md  Cargo.toml
crates/crm-customer-enrichment-visibility/: Cargo.toml
(+1194 files in other folders)
