# Public mutation entrypoints are governed by crm-capability-ingress and ADR-030.
[workspace]
resolver = "2"
members = [
  "crates/crm-core-contracts",
  "crates/crm-core-data",
  "crates/crm-core-events",
  "crates/crm-core-permissions",
  "crates/crm-core-workflow",
  "crates/crm-core-files",
  "crates/crm-core-integrations",
  "crates/crm-module-manifest",
  "crates/crm-module-sdk",
  "crates/crm-module-registry",
  "crates/crm-capability-runtime",
  "crates/crm-capability-adapters",
  "crates/crm-activities-capability-adapter",
  "crates/crm-capability-ingress",
  "crates/crm-proto-contracts",
  "crates/crm-capability-plan-support",
  "crates/crm-query-runtime",
  "crates/crm-sales-capability-adapter",
  "crates/crm-sales-activities-capability-composition",
  "crates/crm-sales-activities-query-adapter",
  "modules/crm-sales",
  "modules/crm-activities",
  "services/crm-api",
]

[workspace.package]
edition = "2024"
license = "Proprietary"
