# Public mutation entrypoints are governed by crm-capability-ingress and ADR-030.
# Tenant-scoped rebuildable projection orchestration is governed by crm-projection-runtime; PostgreSQL remains an adapter.
# Permission-aware search treats projection-backed indexes as candidates and repeats live field/resource visibility before disclosure.
[workspace]
resolver = "2"
members = [
  "crates/crm-core-contracts",
  "crates/crm-core-data",
  "crates/crm-core-events",
  "crates/crm-core-permissions",
  "crates/crm-core-workflow",
  "crates/crm-core-files",
  "crates/crm-core-integrations",
  "crates/crm-module-manifest",
  "crates/crm-module-sdk",
  "crates/crm-module-registry",
  "crates/crm-metadata-runtime",
  "crates/crm-metadata-schema",
  "crates/crm-metadata-api-adapter",
  "crates/crm-metadata-query-adapter",
  "crates/crm-capability-runtime",
  "crates/crm-capability-adapters",
  "crates/crm-activities-capability-adapter",
  "crates/crm-capability-ingress",
  "crates/crm-proto-contracts",
  "crates/crm-capability-plan-support",
  "crates/crm-query-runtime",
  "crates/crm-projection-runtime",
  "crates/crm-search-runtime",
  "crates/crm-search-query-adapter",
  "crates/crm-global-search-composition",
  "crates/crm-sales-capability-adapter",
  "crates/crm-parties-capability-adapter",
  "crates/crm-parties-query-adapter",
  "crates/crm-application-runtime",
  "crates/crm-sales-activities-capability-composition",
  "crates/crm-sales-activities-link-contract-adapter",
  "crates/crm-sales-activities-query-adapter",
  "modules/crm-sales",
  "modules/crm-activities",
  "modules/crm-sales-activities-link",
  "modules/crm-parties",
  "modules/crm-customer-accounts",
  "modules/crm-contact-points",
  "services/crm-api",
]

[workspace.package]
edition = "2024"
license = "Proprietary"
