# Public mutation entrypoints are governed by crm-capability-ingress and ADR-030.
# Tenant-scoped rebuildable projection orchestration is governed by crm-projection-runtime; PostgreSQL remains an adapter.
# Permission-aware search treats projection-backed indexes as candidates and repeats live field/resource visibility before disclosure.
[workspace]
resolver = "2"
members = [
  "crates/crm-core-contracts",
  "crates/crm-core-data",
  "crates/crm-core-events",
  "crates/crm-core-permissions",
  "crates/crm-core-workflow",
  "crates/crm-core-files",
  "crates/crm-core-integrations",
  "crates/crm-module-manifest",
  "crates/crm-module-sdk",
  "crates/crm-module-registry",
  "crates/crm-metadata-runtime",
  "crates/crm-metadata-schema",
  "crates/crm-metadata-api-adapter",
  "crates/crm-metadata-query-adapter",
  "crates/crm-capability-runtime",
  "crates/crm-capability-adapters",
  "crates/crm-application-composition",
  "crates/crm-activities-capability-adapter",
  "crates/crm-capability-ingress",
  "crates/crm-proto-contracts",
  "crates/crm-capability-plan-support",
  "crates/crm-customer-enrichment-capability-adapter",
  "crates/crm-customer-enrichment-query-adapter",
  "crates/crm-query-runtime",
  "crates/crm-projection-runtime",
  "crates/crm-search-runtime",
  "crates/crm-search-query-adapter",
  "crates/crm-global-search-composition",
  "crates/crm-customer-360-composition",
  "crates/crm-customer-360-query-adapter",
  "crates/crm-sales-capability-adapter",
  "crates/crm-parties-capability-adapter",
  "crates/crm-parties-query-adapter",
  "crates/crm-party-reference-composition",
  "crates/crm-customer-accounts-capability-adapter",
  "crates/crm-customer-accounts-capability-composition",
  "crates/crm-customer-accounts-query-adapter",
  "crates/crm-contact-points-capability-adapter",
  "crates/crm-contact-points-capability-composition",
  "crates/crm-contact-points-query-adapter",
  "crates/crm-party-relationships-capability-adapter",
  "crates/crm-party-relationships-capability-composition",
  "crates/crm-party-relationships-query-adapter",
  "crates/crm-party-relationships-projection",
  "crates/crm-consents-capability-adapter",
  "crates/crm-consents-capability-composition",
  "crates/crm-consents-query-adapter",
  "crates/crm-identity-resolution-capability-adapter",
  "crates/crm-identity-resolution-capability-composition",
  "crates/crm-identity-resolution-merge-composition",
  "crates/crm-identity-resolution-query-adapter",
  "crates/crm-customer-data-operations-capability-adapter",
  "crates/crm-customer-data-operations-query-adapter",
  "crates/crm-customer-data-operations-execution-composition",
  "crates/crm-customer-data-operations-source-composition",
  "crates/crm-data-quality-capability-adapter",
  "crates/crm-data-quality-query-adapter",
  "crates/crm-data-quality-source-composition",
  "crates/crm-application-runtime",
  "crates/crm-sales-activities-capability-composition",
  "crates/crm-sales-activities-link-contract-adapter",
  "crates/crm-sales-activities-query-adapter",
  "modules/crm-sales",
  "modules/crm-activities",
  "modules/crm-sales-activities-link",
  "modules/crm-parties",
  "modules/crm-customer-accounts",
  "modules/crm-contact-points",
  "modules/crm-party-relationships",
  "modules/crm-consents",
  "modules/crm-identity-resolution",
  "modules/crm-customer-data-operations",
  "modules/crm-data-quality",
  "modules/crm-customer-enrichment",
  "services/crm-api",
]

[workspace.package]
edition = "2024"
license = "Proprietary"
