[package]
name = "crm-activities-capability-adapter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-activities = { path = "../../modules/crm-activities" }
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-contracts = { path = "../crm-core-contracts" }
crm-core-data = { path = "../crm-core-data" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
prost = "0.14"

[features]
default = []
postgres-integration = ["crm-core-data/postgres-integration"]

[dev-dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt"] }

[[test]]
name = "postgres_noop"
path = "tests/postgres_noop.rs"
required-features = ["postgres-integration"]
