[package]
name = "crm-application-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
crm-capability-adapters = { path = "../crm-capability-adapters" }
crm-capability-ingress = { path = "../crm-capability-ingress" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-contact-points-capability-adapter = { path = "../crm-contact-points-capability-adapter" }
crm-contact-points-query-adapter = { path = "../crm-contact-points-query-adapter" }
crm-core-data = { path = "../crm-core-data" }
crm-core-events = { path = "../crm-core-events" }
crm-customer-360-composition = { path = "../crm-customer-360-composition" }
crm-customer-360-query-adapter = { path = "../crm-customer-360-query-adapter" }
crm-customer-accounts-capability-adapter = { path = "../crm-customer-accounts-capability-adapter" }
crm-customer-accounts-query-adapter = { path = "../crm-customer-accounts-query-adapter" }
crm-global-search-composition = { path = "../crm-global-search-composition" }
crm-metadata-api-adapter = { path = "../crm-metadata-api-adapter" }
crm-metadata-query-adapter = { path = "../crm-metadata-query-adapter" }
crm-module-registry = { path = "../crm-module-registry" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-parties-capability-adapter = { path = "../crm-parties-capability-adapter" }
crm-parties-query-adapter = { path = "../crm-parties-query-adapter" }
crm-party-relationships-capability-adapter = { path = "../crm-party-relationships-capability-adapter" }
crm-party-relationships-projection = { path = "../crm-party-relationships-projection" }
crm-party-relationships-query-adapter = { path = "../crm-party-relationships-query-adapter" }
crm-query-runtime = { path = "../crm-query-runtime" }
crm-sales-activities-capability-composition = { path = "../crm-sales-activities-capability-composition" }
crm-sales-activities-link = { path = "../../modules/crm-sales-activities-link" }
crm-sales-activities-query-adapter = { path = "../crm-sales-activities-query-adapter" }
crm-search-query-adapter = { path = "../crm-search-query-adapter" }
crm-search-runtime = { path = "../crm-search-runtime" }
http = "1"
prost = "0.14"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-web = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
