[package]
name = "crm-application-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[lints.clippy]
# Module-specific assembly contributes independent adapters through the generic composition runtime.
# Keep constructor breadth local to this compile-time composition boundary.
too_many_arguments = "allow"

[dependencies]
axum = "0.8"
crm-application-composition = { path = "../crm-application-composition" }
crm-capability-adapters = { path = "../crm-capability-adapters" }
crm-capability-ingress = { path = "../crm-capability-ingress" }
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-consents-capability-adapter = { path = "../crm-consents-capability-adapter" }
crm-consents-capability-composition = { path = "../crm-consents-capability-composition" }
crm-consents-query-adapter = { path = "../crm-consents-query-adapter" }
crm-contact-points-capability-adapter = { path = "../crm-contact-points-capability-adapter" }
crm-contact-points-capability-composition = { path = "../crm-contact-points-capability-composition" }
crm-contact-points-query-adapter = { path = "../crm-contact-points-query-adapter" }
crm-core-data = { path = "../crm-core-data" }
crm-core-events = { path = "../crm-core-events" }
crm-customer-360-composition = { path = "../crm-customer-360-composition" }
crm-customer-360-query-adapter = { path = "../crm-customer-360-query-adapter" }
crm-customer-accounts-capability-adapter = { path = "../crm-customer-accounts-capability-adapter" }
crm-customer-accounts-capability-composition = { path = "../crm-customer-accounts-capability-composition" }
crm-customer-accounts-query-adapter = { path = "../crm-customer-accounts-query-adapter" }
crm-customer-data-operations-capability-adapter = { path = "../crm-customer-data-operations-capability-adapter" }
crm-customer-data-operations-execution-composition = { path = "../crm-customer-data-operations-execution-composition" }
crm-customer-data-operations-query-adapter = { path = "../crm-customer-data-operations-query-adapter" }
crm-customer-data-operations-source-composition = { path = "../crm-customer-data-operations-source-composition" }
crm-customer-enrichment-capability-adapter = { path = "../crm-customer-enrichment-capability-adapter" }
crm-customer-enrichment-capability-composition = { path = "../crm-customer-enrichment-capability-composition" }
crm-customer-enrichment-query-adapter = { path = "../crm-customer-enrichment-query-adapter" }
crm-customer-enrichment-request-list-query-adapter = { path = "../crm-customer-enrichment-request-list-query-adapter" }
crm-customer-enrichment-suggestion-query-adapter = { path = "../crm-customer-enrichment-suggestion-query-adapter" }
crm-data-quality-capability-adapter = { path = "../crm-data-quality-capability-adapter" }
crm-data-quality-query-adapter = { path = "../crm-data-quality-query-adapter" }
crm-data-quality-source-composition = { path = "../crm-data-quality-source-composition" }
crm-global-search-composition = { path = "../crm-global-search-composition" }
crm-identity-resolution-capability-adapter = { path = "../crm-identity-resolution-capability-adapter" }
crm-identity-resolution-capability-composition = { path = "../crm-identity-resolution-capability-composition" }
crm-identity-resolution-merge-composition = { path = "../crm-identity-resolution-merge-composition" }
crm-identity-resolution-query-adapter = { path = "../crm-identity-resolution-query-adapter" }
crm-identity-resolution-merge-query-adapter = { path = "../crm-identity-resolution-merge-query-adapter" }
crm-metadata-api-adapter = { path = "../crm-metadata-api-adapter" }
crm-metadata-query-adapter = { path = "../crm-metadata-query-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-parties-capability-adapter = { path = "../crm-parties-capability-adapter" }
crm-parties-query-adapter = { path = "../crm-parties-query-adapter" }
crm-party-reference-composition = { path = "../crm-party-reference-composition" }
crm-party-relationships-capability-adapter = { path = "../crm-party-relationships-capability-adapter" }
crm-party-relationships-capability-composition = { path = "../crm-party-relationships-capability-composition" }
crm-party-relationships-projection = { path = "../crm-party-relationships-projection" }
crm-party-relationships-query-adapter = { path = "../crm-party-relationships-query-adapter" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
crm-query-runtime = { path = "../crm-query-runtime" }
crm-sales-activities-capability-composition = { path = "../crm-sales-activities-capability-composition" }
crm-sales-activities-link = { path = "../../modules/crm-sales-activities-link" }
crm-sales-activities-query-adapter = { path = "../crm-sales-activities-query-adapter" }
crm-search-query-adapter = { path = "../crm-search-query-adapter" }
crm-search-runtime = { path = "../crm-search-runtime" }
http = "1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-web = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"

[dev-dependencies]
crm-customer-enrichment = { path = "../../modules/crm-customer-enrichment" }
crm-customer-enrichment-review-adapter = { path = "../crm-customer-enrichment-review-adapter" }
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
