[package]
name = "crm-capability-ingress"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-module-sdk = { path = "../crm-module-sdk" }
http = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
tonic = { version = "0.14", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
