[package]
name = "crm-capability-ingress"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
postgres-integration = []

[dependencies]
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-query-runtime = { path = "../crm-query-runtime" }
http = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
tonic = { version = "0.14", default-features = false }

[dev-dependencies]
crm-capability-adapters = { path = "../crm-capability-adapters" }
crm-core-data = { path = "../crm-core-data" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
crm-sales-activities-capability-composition = { path = "../crm-sales-activities-capability-composition" }
crm-sales-activities-query-adapter = { path = "../crm-sales-activities-query-adapter" }
prost = "0.14"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }

[[test]]
name = "postgres_gateway_e2e"
path = "tests/postgres_gateway_e2e.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_production_mutations"
path = "tests/postgres_production_mutations.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_production_evidence_rollback"
path = "tests/postgres_production_evidence_rollback.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_production_queries"
path = "tests/postgres_production_queries.rs"
required-features = ["postgres-integration"]
