[package]
name = "crm-capability-plan-support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-contracts = { path = "../crm-core-contracts" }
crm-core-data = { path = "../crm-core-data" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
prost = "0.14"
prost-types = "0.14"
serde_json = "1"
sha2 = "0.10"
