[package]
name = "crm-consents-query-adapter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-consents = { path = "../../modules/crm-consents" }
crm-consents-capability-adapter = { path = "../crm-consents-capability-adapter" }
crm-consents-capability-composition = { path = "../crm-consents-capability-composition" }
crm-core-data = { path = "../crm-core-data" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
crm-query-runtime = { path = "../crm-query-runtime" }
prost = "0.14"
