[package]
name = "crm-core-data"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
postgres-integration = []

[dependencies]
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-contracts = { path = "../crm-core-contracts" }
crm-core-events = { path = "../crm-core-events" }
crm-metadata-api-adapter = { path = "../crm-metadata-api-adapter" }
crm-metadata-query-adapter = { path = "../crm-metadata-query-adapter" }
crm-metadata-runtime = { path = "../crm-metadata-runtime" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
crm-search-runtime = { path = "../crm-search-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[[test]]
name = "postgres_foundation"
path = "tests/postgres_foundation.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_advanced"
path = "tests/postgres_advanced.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_query"
path = "tests/postgres_query.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_event_delivery"
path = "tests/postgres_event_delivery.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_projection_runtime"
path = "tests/postgres_projection_runtime.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_search"
path = "tests/postgres_search.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_metadata"
path = "tests/postgres_metadata.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_metadata_query"
path = "tests/postgres_metadata_query.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_metadata_capability"
path = "tests/postgres_metadata_capability.rs"
required-features = ["postgres-integration"]
