[package]
name = "crm-customer-360-query-adapter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-customer-360-composition = { path = "../crm-customer-360-composition" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
crm-query-runtime = { path = "../crm-query-runtime" }
prost = "0.14"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "json"] }
