[package]
name = "crm-customer-accounts-capability-composition"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-customer-accounts-capability-adapter = { path = "../crm-customer-accounts-capability-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-party-reference-composition = { path = "../crm-party-reference-composition" }
