[package]
name = "crm-customer-data-operations-execution-composition"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-adapters = { path = "../crm-capability-adapters" }
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-customer-data-operations = { path = "../../modules/crm-customer-data-operations" }
crm-customer-data-operations-capability-adapter = { path = "../crm-customer-data-operations-capability-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-parties-capability-adapter = { path = "../crm-parties-capability-adapter" }
crm-proto-contracts = { path = "../crm-proto-contracts" }

[dev-dependencies]
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt"] }
