[package]
name = "crm-customer-data-operations-execution-composition"
version = "0.1.0"
edition = "2024"
publish = false

[lints.clippy]
# The execution sink keeps exact immutable artifact evidence explicit at the authorization boundary.
# Keep this exception local to the composition crate instead of weakening workspace-wide policy.
too_many_arguments = "allow"

[dependencies]
crm-capability-adapters = { path = "../crm-capability-adapters" }
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-core-files = { path = "../crm-core-files" }
crm-customer-data-operations = { path = "../../modules/crm-customer-data-operations" }
crm-customer-data-operations-capability-adapter = { path = "../crm-customer-data-operations-capability-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-parties-capability-adapter = { path = "../crm-parties-capability-adapter" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
prost = "0.14"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
