[package]
name = "crm-customer-data-operations-source-composition"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-core-files = { path = "../crm-core-files" }
crm-customer-data-operations = { path = "../../modules/crm-customer-data-operations" }
crm-customer-data-operations-capability-adapter = { path = "../crm-customer-data-operations-capability-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
