[package]
name = "crm-customer-enrichment-application-composition"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
postgres-integration = []

[dependencies]
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-customer-enrichment = { path = "../../modules/crm-customer-enrichment" }
crm-customer-enrichment-application-adapter = { path = "../crm-customer-enrichment-application-adapter" }
crm-customer-enrichment-capability-adapter = { path = "../crm-customer-enrichment-capability-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }

[dev-dependencies]
crm-capability-ingress = { path = "../crm-capability-ingress" }
crm-customer-enrichment-review-adapter = { path = "../crm-customer-enrichment-review-adapter" }
prost = "0.14"
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "postgres_application_process"
path = "tests/postgres_application_process.rs"
required-features = ["postgres-integration"]
