[package]
name = "crm-customer-enrichment-capability-adapter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-customer-enrichment = { path = "../../modules/crm-customer-enrichment" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
